--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,8 @@ phases:
 
   pre_build: # Add kubeconfig to access to EKS cluster
     commands:
-      - echo $repo
+      - sudo docker ps
+      - docker ps
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - aws eks update-kubeconfig --name bharath-codetest-cluster --role-arn arn:aws:iam::673377339958:role/terraform
   build: # Build Docker image and tag it with the commit sha
