--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,16 +9,16 @@ phases:
 
   pre_build: # Add kubeconfig to access to EKS cluster
     commands:
-      - docker ps
+      - echo $account.dkr.ecr.$region.amazonaws.com/$repo
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - aws eks update-kubeconfig --name bharath-codetest-cluster --role-arn arn:aws:iam::673377339958:role/terraform
   build: # Build Docker image and tag it with the commit sha
     commands:
       - docker build -t $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION app/
-      - docker tag $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION 673377339958.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker tag $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION $account.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
   post_build: # Push the Docker image to the ECR
     commands:
       - $(aws ecr get-login --no-include-email --region eu-west-1)
       - docker push 673377339958.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
       - cd ..
-      - helm upgrade -i brapp  brapp --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION image.repository=673377339958.dkr.ecr.eu-west-1.amazonaws.com/$repo
+      - helm upgrade -i brapp  brapp --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION image.repository=$account.dkr.ecr.eu-west-1.amazonaws.com/$repo
