--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,10 +15,9 @@ phases:
   build: # Build Docker image and tag it with the commit sha
     commands:
       - docker build -t $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION app/
-      - docker tag $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION $account.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - docker tag $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION $account.dkr.ecr.$region.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
   post_build: # Push the Docker image to the ECR
     commands:
       - $(aws ecr get-login --no-include-email --region eu-west-1)
       - docker push 673377339958.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
-      - cd ..
-      - helm upgrade -i brapp  brapp --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION image.repository=$account.dkr.ecr.eu-west-1.amazonaws.com/$repo
+      - helm upgrade brapp brapp --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
