--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build: # Add kubeconfig to access to EKS cluster
     commands:
       - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
-      - aws eks update-kubeconfig --name bharath-codetest-cluster --role-arn arn:aws:iam::673377339958:role/terraform
+      - aws eks update-kubeconfig --name $ekscluster --role-arn $eksrole
   build: # Build Docker image and tag it with the commit sha
     commands:
       - docker build -t $repo:$CODEBUILD_RESOLVED_SOURCE_VERSION app/
@@ -19,4 +19,4 @@ phases:
     commands:
       - $(aws ecr get-login --no-include-email --region eu-west-1)
       - docker push 673377339958.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
-      - helm upgrade brapp brapp --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
+      - helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
