--- a/helm-chart/brapp/templates/secrets.yaml
+++ b/helm-chart/brapp/templates/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.name }}
-  namespace: default
+  namespace: {{ .Values.namespace }}
 type: Opaque
 data:
   USERNAME: {{ .Values.secrets.username }}
