--- a/helm-chart/brapp/templates/service.yaml
+++ b/helm-chart/brapp/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "brapp.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "brapp.labels" . | nindent 4 }}
 spec:
