--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,8 +20,8 @@ phases:
       - $(aws ecr get-login --no-include-email --region eu-west-1)
       - docker push 673377339958.dkr.ecr.eu-west-1.amazonaws.com/$repo:$CODEBUILD_RESOLVED_SOURCE_VERSION
       - |
-      - if [ $(helm ls | grep -w brapp | wc -l`) -eq 1 ] ; then
-                helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
-        else
-                helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
-        fi
+                if [ $(helm ls | grep -w brapp | wc -l) -eq 1 ] ; then
+                        helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
+                else
+                        helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
+                fi
