--- a/helm-chart/brapp/templates/deployment.yaml
+++ b/helm-chart/brapp/templates/deployment.yaml
@@ -52,10 +52,10 @@ spec:
             - name: http
               containerPort: 5000
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
