--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,5 +23,5 @@ phases:
                 if [ $(helm ls | grep -w brapp | wc -l) -eq 1 ] ; then
                         helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
                 else
-                        helm upgrade $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
+                        helm install $appname helm-chart/$appname --set image.imageTag=$CODEBUILD_RESOLVED_SOURCE_VERSION,image.repository=$account.dkr.ecr.$region.amazonaws.com/$repo
                 fi
